# datastructs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.bat
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  avltree.c  hashtable.c  helper.h
include/datastructs/: avl_tree.h  bst.h  functions.h  hash_table.h  hash_table_macro.h  hashtable.h  macros.h  memory.h  priority_queue.h  queue.h  stack.h  trie.h  types.h  utils.h
scripts/: run-tests.bash
src/: CMakeLists.txt  avltree.c  bst.c  functions.c  hashtable.c  memory.c  priorityqueue.c  queue.c  stack.c  trie.c
tests/: CMakeLists.txt  avltest.cpp  avltree.cpp  bsttest.cpp  hashtable.cpp  hashtablemock.cpp  helper.h  htabletest.cpp  pqtest.cpp  priorityqueue.cpp  queue.cpp  queuetest.cpp  stacktest.cpp  utils.hpp
